# impgrapher

./: .gitignore  README.md  grapher.py  main.py  pyproject.toml  requirements.txt  setup.py  walker.py
impgraph/: __main__.py  grapher.py  walker.py
src/impgraph/: __init__.py  __main__.py  cli.py  grapher.py  models.py  stdlib_compat.py  walker.py
tests/: conftest.py  test_cli.py  test_grapher.py  test_walker.py
